--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "dashbird",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.2",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
-  }
+    "name": "dashbird",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "^2.0.11",
+        "@chakra-ui/react": "^2.3.6",
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "framer-motion": "^7.6.1",
+        "js-yaml": "^4.1.0",
+        "next": "12.3.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@types/js-yaml": "^4.0.5",
+        "@types/node": "18.11.2",
+        "@types/react": "18.0.21",
+        "@types/react-dom": "18.0.6",
+        "eslint": "8.25.0",
+        "eslint-config-next": "12.3.1",
+        "typescript": "4.8.4"
+    }
 }
