--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# This is my config
 config.yml
+
+# Images that I use for testing that don't need to be in the final repo
+public/grafana.png
+public/caddy.png
+public/pihole.png
+public/proxmox.png
+public/tailscale.png
 
 # dependencies
 /node_modules
